--- a/Ezhov/Lab1/css/allcss.css
+++ b/Ezhov/Lab1/css/allcss.css
@@ -21,8 +21,17 @@ html, body {
     
 }
 
-.main-list-block {
-    
+.main-img {
+    width: 50%;
+    height: 50%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    align-content: center; 
+    justify-content: center; 
+    overflow: auto;
 }
 
 .main-list-block > li > a {
@@ -44,7 +53,7 @@ html, body {
 }
 
 .table {
-    color: wheat;
+    color: black;
 }
 
 .inputs {
@@ -59,5 +68,5 @@ html, body {
     justify-content: center; 
     overflow: auto;
     display: inline-block;
-    color: wheat
+    color: black
 }
